product model 제작중

--- a/src/main/resources/templates/productModel/productModel-form.html
+++ b/src/main/resources/templates/productModel/productModel-form.html
@@ -1,10 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<head th:replace="common/fragments/config-fragment :: ConfigFragment">
 <body>
+<th:block th:replace="common/fragments/left-navbar" :: LeftNavbarFragment></th:block>
+<th:block th:replace="common/fragments/header-fragment" :: headerFragment></th:block>
+<div class="content-area">
+    <h2>모델관리</h2>
+    <hr>
+    <form action="/product/model" method="post">
+
+    <div style="padding-bottom: 5px;">
+        <select name="productCategoryId" id="category-select" class="form-select">
+            <option th:each="productCategory : ${productCategoryList}"
+                    th:text="${productCategory.productCategory}"
+                    th:value="${productCategory.id}"
+            ></option>
+        </select>
+        <label for="category-select"></label>
+    </div>
+        <div style="padding-bottom: 10px;">
+            <select name="productStatus" class="form-select">
+                <option value="0">출시전</option>
+                <option value="1">출시</option>
+                <option value="2">단종</option>
+                <option value="3">일시단종</option>
+            </select>
+        </div>
+    <div class="form-floating mb-3">
+        <input name="modelCord" id="productModel" class="form-control" type="text">
+        <label for="productModel">모델명을 입력하세요</label>
+    </div>
+    <div class="d-grid gap-2">
+        <input placeholder="재고량을 입력하세요" class="form-control" name="stock" id="product-stock" type="number" min="0">
+        <label for="product-stock"></label>
+    </div>
+    <div class="d-grid gap-2">
+        <button class="btn btn-primary">저장</button>
+    </div>
+    </form>
+
+</div>
 
 </body>
 </html>
