--- a/src/main/resources/templates/category/category-form.html
+++ b/src/main/resources/templates/category/category-form.html
@@ -8,7 +8,7 @@
 <th:block th:replace="common/fragments/left-navbar" :: LeftNavbarFragment></th:block>
 <th:block th:replace="common/fragments/header-fragment" :: headerFragment></th:block>
 <div class="content-area">
-    <h2>직원관리</h2>
+    <h2>제품 카테고리 관리</h2>
     <hr>
 <form action="/product/category" method="post" >
     <div class="form-floating mb-3">
@@ -36,11 +36,11 @@
         </tr>
     </thead>
     <tbody>
-        <tr th:each="category:${categoryList}">
+        <tr th:each="category:${productCategoryList}">
             <td th:text="${category.id}"></td>
             <td th:text="${category.productCategory}"></td>
             <td th:text="${category.memberId}"></td>
-            <td></td>
+            <td th:text="${category.regDt}"></td>
         </tr>
     </tbody>
 </table>
