--- a/src/main/resources/templates/productModel/productModel-form.html
+++ b/src/main/resources/templates/productModel/productModel-form.html
@@ -21,11 +21,8 @@
         <label for="category-select"></label>
     </div>
         <div style="padding-bottom: 10px;">
-            <select name="productStatus" class="form-select">
-                <option value="0">출시전</option>
-                <option value="1">출시</option>
-                <option value="2">단종</option>
-                <option value="3">일시단종</option>
+            <select name="productStatusId" class="form-select">
+                <option th:each="productStatus : ${productStatusList}" th:value="${productStatus.id}" th:text="${productStatus.productStatus}"></option>
             </select>
         </div>
     <div class="form-floating mb-3">
@@ -40,7 +37,39 @@
         <button class="btn btn-primary">저장</button>
     </div>
     </form>
-
+    <div style="height : 15px;"></div>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>id</th>
+                <th>카테고리</th>
+                <th>모델코드</th>
+                <th>재고량</th>
+                <th>출시상태</th>
+                <th>등록자</th>
+                <th>등록일자</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr th:each="productModel : ${productModelList}">
+                <td th:text="${productModel.id}" aria-label="아이디"></td>
+                <td th:text="${productModel.productCategory}" aria-label="카데고리"></td>
+                <td th:text="${productModel.modelCord}" aria-label="모델코드"></td>
+                <td th:text="${productModel.stock}" aria-label="재고량"></td>
+                <td aria-label="출시상태">
+                    <select class="form-select">
+                        <option th:each="productStatus : ${productStatusList}"
+                                th:value="${productStatus.id}"
+                                th:text="${productStatus.productStatus}"
+                                th:selected="${productStatus.id} == ${productModel.productStatusId}"
+                        ></option>
+                    </select>
+                </td>
+                <td th:text="${productModel.name}" aria-label="등록자"></td>
+                <td th:text="${productModel.regDt}" aria-label="등록일"></td>
+            </tr>
+        </tbody>
+    </table>
 </div>
 
 </body>
