--- a/src/main/resources/templates/order/order-registration-form.html
+++ b/src/main/resources/templates/order/order-registration-form.html
@@ -25,123 +25,164 @@
         </div>
         <div class="input-group mb-3">
             <span class="input-group-text" id="sales-no">판매번호</span>
-            <input type="text" name="sales-no" class="form-control" aria-label="Sizing example input"
-                   aria-describedby="inputGroup-sizing-default">
-        </div>
-        <div class="input-group mb-3">
-            <span class="input-group-text" id="customer-name">고객명</span>
-            <input type="text" name="sales-no" class="form-control" aria-label="Sizing example input"
-                   aria-describedby="inputGroup-sizing-default">
-        </div>
-        <div class="input-group mb-3">
-            <span class="input-group-text" id="customer-phone-number">연락처</span>
-            <input type="text" name="sales-no" class="form-control" aria-label="Sizing example input"
-                   aria-describedby="inputGroup-sizing-default">
-        </div>
-        <div class="input-group mb-3">
-            <span class="input-group-text" id="customer-address-first">시/도</span>
-            <input type="text" name="customerAddressFirst" class="form-control" aria-label="Sizing example input"
-                   aria-describedby="inputGroup-sizing-default">
-        </div>
-        <div class="input-group mb-3">
-            <span class="input-group-text" id="customer-address-second">군/구</span>
-            <input type="text" name="customerAddressSecond" class="form-control" aria-label="Sizing example input"
-                   aria-describedby="inputGroup-sizing-default">
-        </div>
-        <div class="input-group mb-3">
-            <span class="input-group-text" id="customer-address-third">읍/면/동</span>
-            <input type="text" name="customerAddressThird" class="form-control" aria-label="Sizing example input"
-                   aria-describedby="inputGroup-sizing-default">
-        </div>
-        <div class="input-group mb-3">
-            <span class="input-group-text" id="customer-address-detail">상세주소</span>
-            <input type="text" name="customerAddressDetail" class="form-control" aria-label="Sizing example input"
+            <input type="text" name="salesNo" class="form-control" value="2500000000" aria-label="Sizing example input"
                    aria-describedby="inputGroup-sizing-default">
         </div>
         <div class="input-group mb-3">
             <span class="input-group-text" id="delivery-req-dt">배송요청일</span>
-            <input type="date" name="deliveryReqDt" class="form-control" aria-label="Sizing example input"
+            <input type="date" name="deliveryReqDt" class="form-control" value="2023-05-31" aria-label="Sizing example input"
+                   aria-describedby="inputGroup-sizing-default">
+        </div>
+        <div class="input-group mb-3">
+            <span class="input-group-text" id="customer-name">고객명</span>
+            <input type="text" name="customerName" class="form-control" value="이승규" aria-label="Sizing example input"
+                   aria-describedby="inputGroup-sizing-default">
+        </div>
+        <div class="input-group mb-3">
+            <span class="input-group-text" id="customer-phone-number">연락처</span>
+            <input type="text" name="customerPhoneNumber" value="01079076010" class="form-control" aria-label="Sizing example input"
+                   aria-describedby="inputGroup-sizing-default">
+        </div>
+        <div class="input-group mb-3">
+            <span class="input-group-text">주소</span>
+            <input type="text" name="customerAddressFirst" value="서울" aria-label="시/도" class="form-control" placeholder="시/도">
+            <input type="text" name="customerAddressSecond" value="영등포구" aria-label="군/구" class="form-control" placeholder="군/구">
+            <input type="text" name="customerAddressThird" value="여의대방로" aria-label="읍/면/동" class="form-control" placeholder="읍/면/동">
+        </div>
+        <div class="input-group mb-3">
+            <span class="input-group-text" id="customer-address-detail">상세주소</span>
+            <input type="text" name="customerAddressDetail" value="전철apt" class="form-control" aria-label="Sizing example input"
                    aria-describedby="inputGroup-sizing-default">
         </div>
         <div class="input-group mb-3">
             <span class="input-group-text" id="remarks">비고사항</span>
-            <input type="text" name="customerAddressDetail" class="form-control" aria-label="Sizing example input"
+            <input type="text" name="remarks" class="form-control" value="빨리와주세요" aria-label="Sizing example input"
                    aria-describedby="inputGroup-sizing-default">
         </div>
-        <table class="table">
-            <thead>
-            <tr>
-                <th><input type="checkbox"></th>
-                <th>상품코드</th>
-                <th>모델코드</th>
-                <th>수량</th>
-                <th>공급가</th>
-            </tr>
-            </thead>
-            <tbody>
-            </tbody>
-            <tfoot>
-            <tr>
-                <td></td>
-                <td><input type="text" id="productCordEnter"></td>
-                <td></td>
-                <td></td>
-                <td><input type="button" value="삭제"></td>
-            </tr>
-            </tfoot>
-        </table>
-        <script>
-            $('#productCordEnter').keyup((event) => {
-                if (event.keyCode != 13) {
-                    return
-                }
-                // console.log(event.value);
-                // console.log(this);
-                // console.log($(this));
-
-
-                const productCord = $('#productCordEnter').val();
-                // console.log(productCord)
-                const vendorId = $('#vendor-select').val();
-                // const params = JSON.stringify({
-                //     productCord : productCord,
-                //     vendorId : vendorId
-                // });
-                console.log(productCord, vendorId)
-                $.ajax({
-                    type: 'GET',
-                    url: `/api/productModelInfo?productCord=${productCord}&vendorId=${vendorId}`,
-                    dataType: 'json',
-                    success: (result) => {
-                        console.log(result);
-                        let txt = '';
-                        txt +=
-                            `<tr>
-                            <td><input type="checkbox"/></td>
-                            <td class="productCord"><input class="productCord" type="text" value="${result.result.productCord}"></td>
-                            <td class="modelCord"><input class="modelCord" type="text" value="${result.result.modelCord}"></td>
-                            <td class="quantity"><input class="quantity" value="1" type="number" min="0" max="999" onchange="changeQuantity(this,${result.result.supplyPrice})"/></td>
-                            <td class="suplyPrice"><input class="supplyPrice" type="text" value="${result.result.supplyPrice}"></td>
-                            </tr>`;
-                        $('tbody').append(txt);
-
-                    },
-                    error: (error) => {
-                        console.log(error);
-                        alert('통신에러입니다.');
-                    }
-                });
-            });
-            const changeQuantity=(e,supplyPrice)=>{
-                console.log(e);
-                console.log(supplyPrice);
-                const quantity = e.value;
-                console.log('quantity : ',quantity);
-                $(e).parent('td').next('td').innerHTML = e.value * supplyPrice;
-
-            }
-        </script>
     </form>
+    <div style="padding-top: 20px; text-align: right;">
+        <input type="button" value="삭제">
+    </div>
+    <table class="table">
+        <thead>
+        <tr>
+            <th><input class="form-check" type="checkbox"></th>
+            <th>상품코드</th>
+            <th>모델코드</th>
+            <th>수량</th>
+            <th>공급가</th>
+        </tr>
+        </thead>
+        <tbody>
+        </tbody>
+        <tfoot>
+        <tr>
+            <td></td>
+            <td><input type="text" id="productCordEnter"></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        </tfoot>
+    </table>
+    <script>
+        $('#productCordEnter').keyup((event) => {
+            if (event.keyCode != 13) {
+                return
+            }
+            // console.log(event.value);
+            // console.log(this);
+            // console.log($(this));
+
+
+            const productCord = $('#productCordEnter').val();
+            // console.log(productCord)
+            const vendorId = $('#vendor-select').val();
+            // const params = JSON.stringify({
+            //     productCord : productCord,
+            //     vendorId : vendorId
+            // });
+            console.log(productCord, vendorId)
+            $.ajax({
+                type: 'GET',
+                url: `/api/productModelInfo?productCord=${productCord}&vendorId=${vendorId}`,
+                dataType: 'json',
+                success: (result) => {
+                    if (result.result === null) {
+                        alert('코드를 다시 입력해주세요');
+                        return;
+                    }
+                    console.log(result);
+                    let txt = '';
+                    txt +=
+                        `<tr class="productCord-info">
+                            <td><input class="form-check" type="checkbox"/></td>
+                            <td class="productCord"><input name="productCord" disabled class="form-control productCord" type="text" value="${result.result.productCord}"></td>
+                            <td class="modelCord"><input name="modelCord" disabled class="form-control modelCord" type="text" value="${result.result.modelCord}"></td>
+                            <td class="quantity"><input name="orderQuantity" class="form-control quantity" value="1" type="number" min="1" max="999" onchange="changeQuantity(this,${result.result.supplyPrice})"/></td>
+                            <td class="supplyPrice"><input disabled class="form-control supplyPrice" type="text" value="${result.result.supplyPrice}"></td>
+                            </tr>`;
+                    $('tbody').append(txt);
+
+                },
+                error: (error) => {
+                    console.log(error);
+                    alert('통신에러입니다.');
+                }
+            });
+        });
+        const changeQuantity = (e, supplyPrice) => {
+            console.log(e);
+            console.log(supplyPrice);
+            const quantity = e.value;
+            console.log('quantity : ', quantity);
+            $(e).parent('td').next('td').children('input')[0].value = e.value * supplyPrice;
+
+        }
+    </script>
+    <div class="d-grid gap-2 d-md-block" style="text-align : right;">
+        <button class="btn btn-primary" type="button" onclick="createStatement()">전표생성</button>
+        <button class="btn btn-secondary" type="button">주문생성</button>
+    </div>
+    <script>
+        function createStatement() {
+            const form = $('form').serializeArray();
+            let orderInfo = {}
+            for (let i = 0; i < form.length; i++) {
+                orderInfo[form[i].name] = form[i].value;
+            }
+            console.log(orderInfo);
+            const productCords = $('.productCord-info');
+            let orderProductCordArray = [];
+            console.log(productCords)
+            for (let i = 0; i < productCords.length; i++) {
+                let productCord = $(productCords[i]).find('input[name="productCord"]')[0].value;
+                let modelCord = $(productCords[i]).find('input[name="modelCord"]')[0].value;
+                let orderQuantity = $(productCords[i]).find('input[name="orderQuantity"]')[0].value;
+                orderProductCordArray.push(({
+                    productCord : productCord ,
+                    modelCord : modelCord ,
+                    orderQuantity : orderQuantity
+                }));
+            }
+            orderInfo['orderProductCordArray'] = orderProductCordArray;
+            // console.log(orderProductCordArray)
+            console.log(JSON.stringify(orderInfo));
+            $.ajax({
+                type : 'post',
+                url : '/api/order/registration',
+                data : JSON.stringify(orderInfo),
+                dataType : 'json',
+                contentType : 'application/json',
+                success : (result)=>{console.log(result)},
+                error : (error)=>{console.log(error)}
+            })
+        }
+
+        function createOrder() {
+
+        }
+    </script>
 </div>
 
 </body>
