--- a/src/main/resources/templates/order/order-management-form.html
+++ b/src/main/resources/templates/order/order-management-form.html
@@ -15,38 +15,40 @@
     </div>
     <div>
         <div class="input-group">
-            <select style="width:15%;" class="form-select" id="" aria-label="Example select with button addon">
+            <select name="vendorId" style="width:15%;" class="form-select" id="" aria-label="Example select with button addon">
                 <option selected>거래선*</option>
-                <option value="1">주문번호</option>
+                <option th:each="vendor : ${vendorList}" th:value="${vendor.id}" th:text="${vendor.vendorName}"></option>
+            </select>
+            <select name="searchCriteria" style="width:15%;" class="form-select" id="inputGroupSelect04" aria-label="Example select with button addon">
+                <option selected value="1">주문번호</option>
                 <option value="2">판매번호</option>
                 <option value="3">납품번호</option>
             </select>
-            <select style="width:15%;" class="form-select" id="inputGroupSelect04" aria-label="Example select with button addon">
-                <option selected>선택*</option>
-                <option value="1">주문번호</option>
-                <option value="2">판매번호</option>
-                <option value="3">납품번호</option>
-            </select>
-            <input style="width:70%;" class="form-control" type="button" value="">
+            <input name="searchContent" style="width:70%;" class="form-control" type="text" value="">
         </div>
-        <div class="input-group">
-            <span class="input-group-text">주문생성일*</span>
-            <input type="date" class="form-control">
-            <input type="date" class="form-control">
+        <div style="margin-top : 20px;">
+            <div class="input-group" style="width : 30%; float: left; margin-right: 3%;">
+                <span class="input-group-text">주문생성일*</span>
+                <input name="orderCreateStartDt" max="9999-12-31" type="date" class="form-control">
+                <input name="orderCreateEndDt" max="9999-12-31" type="date" class="form-control">
+            </div>
+            <div class="input-group" style="width : 20%; float: left; margin-right: 3%;">
+                <span class="input-group-text">주문상태</span>
+                <select name="orderState" class="form-select" style="float:left;width:10%;">
+                    <option selected>전체</option>
+                    <option>생성</option>
+                    <option>미생성</option>
+                </select>
+            </div>
+            <div class="input-group" style="width : 30%; float: left; margin-right: 3%;">
+                <span class="input-group-text">모델코드</span>
+                <input name="modelCord" type="text" class="form-control">
+            </div>
+            <button onclick="searchOrder()" style="width : 10%;" class="btn btn-primary">검색</button>
         </div>
-
-        <div class="input-group">
-            <span class="input-group-text">주문상태</span>
-            <select class="form-select" style="float:left;width:15%;">
-                <option selected>전체</option>
-                <option>생성</option>
-                <option>미생성</option>
-            </select>
-        </div>
-        <input class="form-control" type="text">
-        <button class="btn btn-primary">검색</button>
+<!--        <input class="form-control" type="text">-->
     </div>
-    <div>
+    <div style="margin-top : 30px;">
         <table class="table">
             <thead>
             <tr>
@@ -56,6 +58,7 @@
                 <th>상품코드</th>
                 <th>모델코드</th>
                 <th>TC</th>
+                <th>주문생성일</th>
                 <th>요구납기일</th>
                 <th>배송예정일</th>
                 <th>납품번호</th>
@@ -68,4 +71,30 @@
 </div>
 
 </body>
+<script>
+
+    const searchOrder=()=>{
+        let vendorId = $('select[name="vendorId"]').val();
+        let searchCriteria = $('select[name="searchCriteria"]').val();
+        let searchContent = $('input[name="searchContent"]').val();
+        let orderCreateStartDt = $('input[name="orderCreateStartDt"]').val();
+        let orderCreateEndDt = $('input[name="orderCreateEndDt"]').val();
+        let orderState = $('input[name="orderState"]').val();
+        let modelCord = $('input[name="modelCord"]').val();
+        const params = {
+            vendorId            : vendorId,
+            searchCriteria      : searchCriteria,
+            searchContent       : searchContent,
+            orderCreateStartDt  : orderCreateStartDt,
+            orderCreateEndDt    : orderCreateEndDt,
+            orderState          : orderState,
+            modelCord           : modelCord
+        }
+    }
+
+
+</script>
+
+
+
 </html>
